@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.143 2005/04/15 06:26:43 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.144 2005/04/17 00:01:33 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  16 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Changed _edit_config() to modify value in-place instead of commenting out and
+  adding the new value to the end of the file.
 
   15 Apr 2005; Preston Cody <codeman@gentoo.org>
   Back.  Did the docuementation thang for ArchTemplate and ClientConfiguration.
